--- a/ItechCleanArst.Api/appsettings.Development.json
+++ b/ItechCleanArst.Api/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=5432;Database=AspNetItechApp;User Id=postgres;Password=root;"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
