--- a/ItechCleanArst.Application/ItechCleanArst.Application.csproj
+++ b/ItechCleanArst.Application/ItechCleanArst.Application.csproj
@@ -6,8 +6,9 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5"/>
+    <PackageReference Include="MediatR" Version="12.0.1"/>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="../ItechCleanArst.Domain/ItechCleanArst.Domain.csproj" />
+    <ProjectReference Include="../ItechCleanArst.Domain/ItechCleanArst.Domain.csproj"/>
   </ItemGroup>
 </Project>
