add documentation on controller

--- a/ItechCleanArst.Api/appsettings.json
+++ b/ItechCleanArst.Api/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtOption": {
+    "SecretKey": "7oUcxS1ocT0s-29r_1XULrNbe6GaNRDTXD3shuNvrqIrThDSCkUhZPG2a_On7xIKNaleu6of1BlzOrKWFQb6-InaQFYjE7fg-cfqhcn2tz8gWf_11FdwRlXjKNnfNs_7",
+    "Duration": 259200
+  }
 }
